PsMake Testing Module
========================================

Version 1.3.1.0
----------------------------------------
(Change) Generate-CoverageSummary: added support for ReportGenerator 2.x series and set 2.5.3 version as default one

Version 1.3.0.0
----------------------------------------
(New) Define-DotnetTests: definition for net core tests

Version 1.2.1.0
----------------------------------------
(Fix) Define-*Tests: fixed passing additional parameters to the runner

Version 1.2.0.0
----------------------------------------
(Changed) Define-NUnitTests: added $AdditionalParameters = @('/framework:4.0')
(Changed) Define-NUnit3Tests: added $AdditionalParameters = @()
(Changed) Define-MbUnitTests: added $AdditionalParameters = @()
(Changed) Define-MsTests: added $AdditionalParameters = @()
(Changed) Define-XUnitTests: added $AdditionalParameters = @()

Version 1.1.0.0
----------------------------------------
(New) Define-NUnit3Tests: allows to define NUnit3 tests
(Changed) Run-Tests: Added support for OpenCover 4.6.X package layout and increased default OpenCover version to 4.6.519

Version 1.0.1.0
----------------------------------------
(New) Define-XUnitTests: allows to define xUnit tests

Version 1.0.0.0
----------------------------------------
Functions:
(New) Define-NUnitTests: allows to define NUnit tests
(New) Define-MbUnitTests: allows to define MbUnit tests
(New) Define-MsTests: allows to define MsTest tests
(New) Run-Tests: executes specified test groups, allowing also to calculate test coverage.
(New) Generate-CoverageSummary: generates coverage summary report (HTML/XML)
(New) Check-AcceptableCoverage: ensures that test coverage is at specified level