@@ -4,6 +4,7 @@ PsMake Testing Module
 Version 1.3.1.0
 ----------------------------------------
 (Change) Generate-CoverageSummary: added support for ReportGenerator 2.x series and set 2.5.3 version as default one
+(Change) Check-AcceptableCoverage: added support for ReportGenerator 2.x series xml report format
 
 Version 1.3.0.0
 ----------------------------------------
